@@ -58,6 +58,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/hex.hpp" // to_hex
 #include "libtorrent/session_stats.hpp"
 #include "libtorrent/socket_type.hpp"
+#include "libtorrent/peer_info.hpp"
 #include "libtorrent/aux_/ip_helpers.hpp" // for is_v4
 
 #if TORRENT_ABI_VERSION == 1
@@ -3022,7 +3023,8 @@ namespace {
 		"picker_log", "session_error", "dht_live_nodes",
 		"session_stats_header", "dht_sample_infohashes",
 		"block_uploaded", "alerts_dropped", "socks5",
-		"file_prio", "oversized_file", "torrent_conflict"
+		"file_prio", "oversized_file", "torrent_conflict",
+		"peer_info"
 		}};
 
 		TORRENT_ASSERT(alert_type >= 0);
@@ -3107,6 +3109,21 @@ namespace {
 		return {};
 #else
 		return torrent_alert::message() + " has a conflict with another torrent";
+#endif
+	}
+
+	peer_info_alert::peer_info_alert(aux::stack_allocator& alloc, torrent_handle h
+		, std::vector<lt::peer_info> p)
+		: torrent_alert(alloc, std::move(h))
+		, peer_info(std::move(p))
+	{}
+
+	std::string peer_info_alert::message() const
+	{
+#ifdef TORRENT_DISABLE_ALERT_MSG
+		return {};
+#else
+		return torrent_alert::message() + " peer_info";
 #endif
 	}
 
@@ -3204,6 +3221,7 @@ namespace {
 	constexpr alert_category_t file_prio_alert::static_category;
 	constexpr alert_category_t oversized_file_alert::static_category;
 	constexpr alert_category_t torrent_conflict_alert::static_category;
+	constexpr alert_category_t peer_info_alert::static_category;
 #if TORRENT_ABI_VERSION == 1
 	constexpr alert_category_t anonymous_mode_alert::static_category;
 	constexpr alert_category_t mmap_cache_alert::static_category;
